force-app/main/default/objects/Milestone1_Milestone__c/fields/Add_l_Manager_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Manager_Debrief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add&apos;l Manager Debrief</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipName>Deliverables1</relationshipName>
    <type>Lookup</type>
</CustomField>