force-app/main/default/objects/Milestone1_Milestone__c/fields/Add_l_Manager_Debrief_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Manager_Debrief_Date__c</fullName>
    <formula>Add_l_Manager_Debrief__r.Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add&apos;l Manager Debrief Date</label>
    <type>Date</type>
</CustomField>