force-app/main/default/objects/Milestone1_Milestone__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>This is the alias for a milestone.</description>
    <inlineHelpText>An alias helps you associate a task to a milestone using the single line entry home page component.</inlineHelpText>
    <label>Deliverable Alias</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>