force-app/main/default/objects/Milestone1_Milestone__c/fields/Assessed_Executive__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Deliverables (Assessments &amp; Coaching)</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>