force-app/main/default/objects/Milestone1_Milestone__c/fields/Assessed_Executive_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Executive_Last_Name__c</fullName>
    <formula>Assessed_Executive__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessed Executive Last Name</label>
    <type>Text</type>
</CustomField>