force-app/main/default/objects/Milestone1_Milestone__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <length>80</length>
    <type>Text</type>
</CustomField>