force-app/main/default/objects/Milestone1_Milestone__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to determine if deliverable can be billed</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>