force-app/main/default/objects/Milestone1_Milestone__c/fields/Blocked_Tasks_in_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Tasks_in_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>How many tasks are blocked in sub-milestones?</inlineHelpText>
    <label>Blocked Tasks (in Sub-Deliverables)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>