force-app/main/default/objects/Milestone1_Milestone__c/fields/Board_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Date__c</fullName>
    <inlineHelpText>Date of the scheduled Board meeting</inlineHelpText>
    <label>Board Date</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Board Presentation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Task_Stage__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>