force-app/main/default/objects/Milestone1_Milestone__c/fields/Clear_to_Reach_Out_for_References__c.field-meta.xml
<CustomField>
    <fullName>Clear_to_Reach_Out_for_References__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear to Schedule References</label>
    <type>Checkbox</type>
</CustomField>