force-app/main/default/objects/Milestone1_Milestone__c/fields/Closed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Closed_Tasks__c</fullName>
    <description>All tasks either complete, incomplete or cancelled</description>
    <formula>Complete_Tasks_in_Tasks__c  +  MIssed_Cancelled_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>