force-app/main/default/objects/Milestone1_Milestone__c/fields/Complete_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Complete_Interviews__c</fullName>
    <inlineHelpText>How many tasks are late?</inlineHelpText>
    <label>Complete Interviews</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Board Interview, Team Effectiveness Interview</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>