force-app/main/default/objects/Milestone1_Milestone__c/fields/Complete_References__c.field-meta.xml
<CustomField>
    <fullName>Complete_References__c</fullName>
    <description>Total number of completed references</description>
    <label>Complete References</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reference Call</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Task_Stage__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>