force-app/main/default/objects/Milestone1_Milestone__c/fields/Complete_Tasks_in_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Complete_Tasks_in_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of complete tasks related to sub-milestones</inlineHelpText>
    <label>Complete Tasks (in Sub-Deliverables)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>