force-app/main/default/objects/Milestone1_Milestone__c/fields/Complete_Total_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Complete_Total_Interviews__c</fullName>
    <formula>TEXT(Complete_Interviews__c) + &quot; of &quot; + TEXT(Total_Interviews__c) + &quot; complete&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete/Total Interviews</label>
    <type>Text</type>
</CustomField>