force-app/main/default/objects/Milestone1_Milestone__c/fields/Complete_Total_References__c.field-meta.xml
<CustomField>
    <fullName>Complete_Total_References__c</fullName>
    <formula>TEXT(Complete_References__c) + &quot; of &quot;+ TEXT(Total_References__c) + &quot; complete&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete/Total References</label>
    <type>Text</type>
</CustomField>