force-app/main/default/objects/Milestone1_Milestone__c/fields/Conga_Reference_Call_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Reference_Call_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga Reference Call Template</label>
    <type>Checkbox</type>
</CustomField>