force-app/main/default/objects/Milestone1_Milestone__c/fields/Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account__c</fullName>
    <formula>Assessed_Executive__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account</label>
    <type>Text</type>
</CustomField>