force-app/main/default/objects/Milestone1_Milestone__c/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <formula>Assessed_Executive__r.MailingStreet &amp;  BR()  &amp;
 Assessed_Executive__r.MailingCity &amp;&quot;, &quot;&amp; Assessed_Executive__r.MailingState &amp;&quot; &quot;&amp; Assessed_Executive__r.MailingPostalCode</formula>
    <label>Contact&apos;s Location</label>
    <type>Text</type>
</CustomField>