force-app/main/default/objects/Milestone1_Milestone__c/fields/Created_Assessment_Interview_Task__c.field-meta.xml
<CustomField>
    <fullName>Created_Assessment_Interview_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creates an Assessment interview task</description>
    <label>Created Assessment Interview Task</label>
    <type>Checkbox</type>
</CustomField>