force-app/main/default/objects/Milestone1_Milestone__c/fields/Created_by_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Opportunity</label>
    <type>Checkbox</type>
</CustomField>