force-app/main/default/objects/Milestone1_Milestone__c/fields/Created_Feedback_Task__c.field-meta.xml
<CustomField>
    <fullName>Created_Feedback_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creates Feedback Task when True</description>
    <label>Created Feedback Task</label>
    <type>Checkbox</type>
</CustomField>