force-app/main/default/objects/Milestone1_Milestone__c/fields/Debrief_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Debrief_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debrief Task Created</label>
    <type>Checkbox</type>
</CustomField>