force-app/main/default/objects/Milestone1_Milestone__c/fields/Due_Date_to_Complete_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_to_Complete_Interviews__c</fullName>
    <description>Deadline for all team effectiveness &amp; board evaluation interviews</description>
    <label>Due Date to Complete Interviews</label>
    <summarizedField>Milestone1_Task__c.Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Board Interview, Team Effectiveness Interview</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>