force-app/main/default/objects/Milestone1_Milestone__c/fields/EA__c.field-meta.xml
<CustomField>
    <fullName>EA__c</fullName>
    <label>EA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amera Ghannam</fullName>
            </value>
            <value>
                <fullName>Brandi Kirk</fullName>
            </value>
            <value>
                <fullName>Carrie Gale</fullName>
            </value>
            <value>
                <fullName>Gabbie Mellet-Kunst</fullName>
            </value>
            <value>
                <fullName>Joshua DiFalco</fullName>
            </value>
            <value>
                <fullName>Melissa Jones</fullName>
            </value>
            <value>
                <fullName>Melody Gallo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>