force-app/main/default/objects/Milestone1_Milestone__c/fields/EA_Lookup__c.field-meta.xml
<CustomField>
    <fullName>EA_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EA</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Deliverables1</relationshipName>
    <type>Lookup</type>
</CustomField>