force-app/main/default/objects/Milestone1_Milestone__c/fields/Earliest_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Scheduled_Date__c</fullName>
    <label>Earliest Scheduled Date</label>
    <type>Date</type>
</CustomField>