force-app/main/default/objects/Milestone1_Milestone__c/fields/Estimated_Expense_From_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Expense_From_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
    <label>Estimated Expense From Sub-Deliverables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>