force-app/main/default/objects/Milestone1_Milestone__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date and time of presentation</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>