force-app/main/default/objects/Milestone1_Milestone__c/fields/Executive_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Executive_Assessment__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO Succession (with Coaching)</fullName>
            </value>
            <value>
                <fullName>CEO Succession (without Coaching)</fullName>
            </value>
            <value>
                <fullName>Executive Assessment (with Coaching)</fullName>
            </value>
            <value>
                <fullName>Executive Assessment (without Coaching)</fullName>
            </value>
            <value>
                <fullName>Team Effectiveness</fullName>
            </value>
            <value>
                <fullName>Executive Coaching</fullName>
            </value>
            <value>
                <fullName>Culture Change</fullName>
            </value>
            <value>
                <fullName>Leadership Development</fullName>
            </value>
            <value>
                <fullName>Board Development</fullName>
            </value>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>