force-app/main/default/objects/Milestone1_Milestone__c/fields/Executive_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Executive_SF_ID__c</fullName>
    <formula>Assessed_Executive__r.Id</formula>
    <label>Executive SF ID</label>
    <type>Text</type>
</CustomField>