force-app/main/default/objects/Milestone1_Milestone__c/fields/Expense_Budget_from_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Expense_Budget_from_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The expense budget all the sub milestones of this milestone.</inlineHelpText>
    <label>Expense Budget from Sub-Deliverables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>