force-app/main/default/objects/Milestone1_Milestone__c/fields/Feedback_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Date_2__c</fullName>
    <description>Date to stop automated reporting</description>
    <label>Feedback Date +</label>
    <type>Date</type>
</CustomField>