force-app/main/default/objects/Milestone1_Milestone__c/fields/Feedback_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Date_formula__c</fullName>
    <formula>Predecessor_Milestone__r.Feedback_Date_Min__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback Date</label>
    <type>Date</type>
</CustomField>