force-app/main/default/objects/Milestone1_Milestone__c/fields/Feedback_Date_Min__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Date_Min__c</fullName>
    <description>Date of initial feedback session</description>
    <inlineHelpText>Date of initial feedback session</inlineHelpText>
    <label>Feedback Date</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Assessment Feedback Session, Board Feedback/Follow-Up</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>