force-app/main/default/objects/Milestone1_Milestone__c/fields/Feedback_Session__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Session__c</fullName>
    <description>Date of executive&apos;s feedback</description>
    <label>Feedback Session</label>
    <type>Date</type>
</CustomField>