force-app/main/default/objects/Milestone1_Milestone__c/fields/First_Chair__c.field-meta.xml
<CustomField>
    <fullName>First_Chair__c</fullName>
    <label>First Chair</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matt Bedwell</fullName>
            </value>
            <value>
                <fullName>Taylor Griffin</fullName>
            </value>
            <value>
                <fullName>Courtney Hamilton</fullName>
            </value>
            <value>
                <fullName>Jeff Jones</fullName>
            </value>
            <value>
                <fullName>Elizabeth Kelly</fullName>
            </value>
            <value>
                <fullName>Stephanie Loquvam</fullName>
            </value>
            <value>
                <fullName>Stephen Miles</fullName>
            </value>
            <value>
                <fullName>John Nasr</fullName>
            </value>
            <value>
                <fullName>Billy Stern</fullName>
            </value>
            <value>
                <fullName>Allison Widman</fullName>
            </value>
            <value>
                <fullName>Adam Wilkes</fullName>
            </value>
            <value>
                <fullName>External Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>