force-app/main/default/objects/Milestone1_Milestone__c/fields/First_Chair_Text__c.field-meta.xml
<CustomField>
    <fullName>First_Chair_Text__c</fullName>
    <formula>First_Chair_Lookup__r.FirstName + &quot; &quot; + First_Chair_Lookup__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Chair Text</label>
    <type>Text</type>
</CustomField>