force-app/main/default/objects/Milestone1_Milestone__c/fields/First_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>First_Touchpoint__c</fullName>
    <description>First completed coaching session</description>
    <label>First Coaching Session</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>