force-app/main/default/objects/Milestone1_Milestone__c/fields/Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>Historical_Data__c</fullName>
    <label>Historical Data</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Scheduled_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Task_Stage__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Scheduled_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2017</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>