force-app/main/default/objects/Milestone1_Milestone__c/fields/IBM_ES_D_Lead__c.field-meta.xml
<CustomField>
    <fullName>IBM_ES_D_Lead__c</fullName>
    <label>IBM ES&amp;D Lead</label>
    <length>80</length>
    <type>Text</type>
</CustomField>