force-app/main/default/objects/Milestone1_Milestone__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date of scheduled assessment interview</description>
    <label>Interview Date</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Assessment Interview</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>