force-app/main/default/objects/Milestone1_Milestone__c/fields/Interviews_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Cleared_Date__c</fullName>
    <label>Interviews Cleared Date</label>
    <type>Date</type>
</CustomField>