force-app/main/default/objects/Milestone1_Milestone__c/fields/Interviews_Cleared_Formula__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Cleared_Formula__c</fullName>
    <formula>IF(Participant_List_Clear_to_Schedule__c,&quot;YES&quot;,&quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviews Cleared Formula</label>
    <type>Text</type>
</CustomField>