force-app/main/default/objects/Milestone1_Milestone__c/fields/Interviews_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Due_Date__c</fullName>
    <label>Interviews Due Date</label>
    <type>Date</type>
</CustomField>