force-app/main/default/objects/Milestone1_Milestone__c/fields/Interviews_To_be_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Interviews_To_be_Scheduled__c</fullName>
    <label>Interviews To be Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>