force-app/main/default/objects/Milestone1_Milestone__c/fields/IS_DC__c.field-meta.xml
<CustomField>
    <fullName>IS_DC__c</fullName>
    <formula>IF (RecordTypeId = &apos;012F0000001Ep2A&apos; &amp;&amp; Complete__c =False &amp;&amp;  ISPICKVAL(Status__c, &quot;Approved&quot;),1,IF(RecordTypeId = &apos;012F0000001Ep2K&apos; &amp;&amp; Complete__c =False &amp;&amp;  ISPICKVAL(Status__c, &quot;Approved&quot;),1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS DC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>