force-app/main/default/objects/Milestone1_Milestone__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Assessed_Executive__r.Title</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>