force-app/main/default/objects/Milestone1_Milestone__c/fields/Last_Coaching_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Coaching_Session__c</fullName>
    <label>Last Coaching Completed</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Coaching Session</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>