force-app/main/default/objects/Milestone1_Milestone__c/fields/Last_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interview_Date__c</fullName>
    <description>Displays the latest scheduled interview date for a deliverable</description>
    <inlineHelpText>Displays the latest scheduled interview date for a deliverable</inlineHelpText>
    <label>Last Interview Date</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Board Interview, Team Effectiveness Interview, Board Feedback/Follow-Up</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>