force-app/main/default/objects/Milestone1_Milestone__c/fields/Last_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reference_Date__c</fullName>
    <description>Displays the latest scheduled reference call for a given deliverable</description>
    <inlineHelpText>Displays the latest scheduled reference call for a given deliverable</inlineHelpText>
    <label>Last Reference Date</label>
    <summarizedField>Milestone1_Task__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Milestone1_Task__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reference Call</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>