force-app/main/default/objects/Milestone1_Milestone__c/fields/Late_Tasks_in_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Late_Tasks_in_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of incomplete and overdue tasks related to child milestones</inlineHelpText>
    <label>Late Tasks (in Sub-Deliverables)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>