force-app/main/default/objects/Milestone1_Milestone__c/fields/Length_of_presentation__c.field-meta.xml
<CustomField>
    <fullName>Length_of_presentation__c</fullName>
    <label>Length of presentation</label>
    <length>65</length>
    <type>Text</type>
</CustomField>