force-app/main/default/objects/Milestone1_Milestone__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of speaking event</description>
    <inlineHelpText>Event location, including city, state, hotel, fl., ballroom, etc.</inlineHelpText>
    <label>Location</label>
    <length>65</length>
    <type>Text</type>
</CustomField>