force-app/main/default/objects/Milestone1_Milestone__c/fields/Main_Project_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Main_Project_Debrief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Key Stakeholder or Group debrief task for the project</description>
    <inlineHelpText>The Key Stakeholder or Group debrief task for the project</inlineHelpText>
    <label>Main Project Debrief</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Milestone1_Task__c.Project_Milestone__r.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>