force-app/main/default/objects/Milestone1_Milestone__c/fields/Main_Project_Debrief_Date__c.field-meta.xml
<CustomField>
    <fullName>Main_Project_Debrief_Date__c</fullName>
    <formula>Main_Project_Debrief__r.Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Project Debrief Date</label>
    <type>Date</type>
</CustomField>