force-app/main/default/objects/Milestone1_Milestone__c/fields/Next_Coaching_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Coaching_Due__c</fullName>
    <label>Next Coaching Due</label>
    <type>Date</type>
</CustomField>